--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@toolio/docs": "^0.1.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
