--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npx webpack-dev-server --mode development",
     "build": "npx webpack --mode development",
-    "test": "node index.js"
+    "test": "node .toolio/index.js"
   },
   "keywords": [],
   "author": "",
